# RdmModels

./: README.md  pyproject.toml
src/: user_model.py
tests/: test_user_model.py
